--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -20,35 +20,35 @@ html, body {
 }
 
 .bg-noncompact-primary {
-  background-color: #1e2b33;
+  background-color: #15252d;
 }
 
 .bg-noncompact-secondary {
-  background-color: #23313a;
+  background-color: #1f323b;
 }
 
 .bg-noncompact-accent {
-  background-color: #9283f7;
+  background-color: #9680ff;
 }
 
 .bg-noncompact-muted {
-  background-color: #d3d8dd;
+  background-color: #d1d9de;
 }
 
 .text-noncompact-primary {
-  color: #1e2b33;
+  color: #15252d;
 }
 
 .text-noncompact-secondary {
-  color: #23313a;
+  color: #1f323b;
 }
 
 .text-noncompact-accent {
-  color: #9283f7;
+  color: #9680ff;
 }
 
 .text-noncompact-muted {
-  color: #d3d8dd;
+  color: #d1d9de;
 }
 
 .page-section {
@@ -56,7 +56,7 @@ html, body {
 }
 
 .section-heading {
-  color: #22313d;
+  color: #1f323b;
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 1.0rem;
