--- a/src/sass/_landing.scss
+++ b/src/sass/_landing.scss
@@ -29,6 +29,25 @@
     padding-bottom: 7rem;
   }
 
+  /* imaging examples */
+  .imaging-example {
+    width: 10.0em;
+    height: 10.0em;
+    background-color: lighten(#d3d8dd, 5%);
+    border: 0.425rem solid lighten(#9680ff, 5%);
+    border-radius: 5.0em;
+    margin: 0 auto;
+    overflow: hidden;
+
+    img {
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+
   a.external-link img {
     filter: grayscale(100%) opacity(.5)
   }
